testcases/valid/comments.shp
/*
 * Comments!
 */

class A<p1> where
    p1: [A<p1>]
{
}

// class A<p1> where
//     p1: [A<p1>]
// {
// }
